--- a/package.yaml
+++ b/package.yaml
@@ -1,16 +1,15 @@
 name:                lambda-calculator
 version:             0.1.0.0
-github:              "githubuser/lambda-calculator"
+github:              "I-Al-Istannen/lambda-calculator"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
-copyright:           "2020 Author name here"
+copyright:           "2020 I-Al-Istannen"
 
 extra-source-files:
   - README.md
-  - ChangeLog.md
 
-description:         Please see the README on GitHub at <https://github.com/githubuser/lambda-calculator#readme>
+description: Please see the README on GitHub at <https://github.com/I-Al-Istannen/lambda-calculator#readme>
 
 dependencies:
   - base >= 4.7 && < 5
@@ -19,9 +18,9 @@ library:
   source-dirs: src
 
 executables:
-  lambda-calculator-exe:
-    main:                Main.hs
-    source-dirs:         app
+  lambda-calculator:
+    main: Main.hs
+    source-dirs: app
     ghc-options:
       - -threaded
       - -rtsopts
