--- a/lambda-calculator.cabal
+++ b/lambda-calculator.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: fa187aa670dc231537959a2fa2f132f0d3576b2e61cf081652c68388e407f997
+-- hash: 4f25f7fd8f489f0001fa1108cc308861011bdfa07257f632e6e83135a332a38d
 
 name:           lambda-calculator
 version:        0.1.0.0
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Lambda.MegaParsing
       Lambda.Parsing
       Lambda.Term
   other-modules:
@@ -33,6 +34,7 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , megaparsec
   default-language: Haskell2010
 
 executable lambda-calculator
@@ -45,4 +47,5 @@ executable lambda-calculator
   build-depends:
       base >=4.7 && <5
     , lambda-calculator
+    , megaparsec
   default-language: Haskell2010
